Fixed credits on small screens

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -153,6 +153,8 @@ footer ul li a:hover {
   font-size: 1.1rem;
   background-color: $primary-color;
   padding-bottom: 1rem;
+  border: none;
+  margin-top: -1px;
 }
 
 .credits a {
